# 0shot-object-insertion

./: .gitignore  LICENSE  README.md
arduino/: README.md  interactive.ino
rl/: README.md  environment.yml  run  run_script.sh  train_script.sh  training_variables.sh  training_variables_contact_insert.sh  training_variables_minitaur.sh  utilities.py
rl/assets/: eTo.json  eval_states.json  init_states.pk
rl/assets/objects/: plate.xml  simple_plate.xml
rl/assets/objects/meshes/: plate.stl
rl/config/: contact_insert.json  minitaur.json
rl/docs/: README.md  documentation.md
rl/envs/: contact_insert_environment.py  contact_insert_py_environment.py
rl/install_contact_insert/: activate_env_vars.sh  deactivate_env_vars.sh  install.sh  setup_env_vars.sh
rl/tfagents_system/: contact_insert_params.py  minitaur_params.py  run.py  sac_collect.py  sac_replay_buffer.py  sac_train.py  step_env.py  train_params_base.py  workers.py
rl/tfagents_system/utils/: comp.py  critic_network.py  critic_rnn_network.py  metric.py
robosuite/: INSTALL.md  README.md
robosuite/controllers/: base_controller.py  osc.py
robosuite/demos/: demo_grip_reset.py  demo_gripper_interaction.py
robosuite/devices/: keyboard.py
robosuite/environments/: base.py  robot_env.py
robosuite/environments/manipulation/: manipulation_env.py
robosuite/models/: base.py
robosuite/models/assets/: base.xml
robosuite/models/assets/grippers/: mgtest.xml  panda_gripper.xml
robosuite/models/grippers/: __init__.py  panda_gripper.py  softrobotics_gripper.py
robosuite/models/robots/manipulators/: __init__.py  soft_panda_robot.py
robosuite/robots/: __init__.py  single_arm.py
robosuite/utils/: mujoco_py_renderer.py  transform_utils.py
ros_controllers/: CMakeLists.txt  README.md  package.xml  requirements.txt  softgrasp_ros_controllers_plugin.xml
ros_controllers/action/: ManageExperiment.action  TFPolicy.action
ros_controllers/cfg/: compliance_param.cfg
ros_controllers/config/: softgrasp_ros_controllers.yaml
ros_controllers/include/softgrasp_ros_controllers/: downward_force_controller.h  tf_policy_controller.h
ros_controllers/launch/: circle_sanity_check.launch  downward_force_controller.launch  policy_actionserver.launch  real.launch  sim.launch  static_poses.launch  static_poses_far.launch  static_poses_peg_hole.launch
ros_controllers/msg/: DownwardForceParams.msg  TFPolicyAction1.msg  TFPolicyObservation.msg  Telemetry.msg
ros_controllers/nodes/: circle_policy_actionserver  circle_sanity_check  downward_policy.py  downward_policy_actionserver  fit_circle.py  point_tracker_policy.py  random_search_policy.py  random_search_policy_actionserver  softgrasp_policy.py  softgrasp_policy_actionserver  tf_policy_actionserver_base.py  transform_utils.py  zero_policy.py  zero_policy_actionserver
ros_controllers/policies/: .gitignore  get_exp.sh
ros_controllers/scripts/: examine_telemetry.py
ros_controllers/src/: downward_force_controller.cpp  tf_policy_controller.cpp
ros_drivers_utils/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
ros_drivers_utils/action/: RaiseArm.action
ros_drivers_utils/config/: arm_force_control_params.yaml  arm_position_control_params.yaml  hand_control_params.yaml
ros_drivers_utils/include/softgrasp_ros/: arm_force_control.h  arm_position_control.h  geometry_utils.h  hand_control.h  marker_pose.h  perception_server.h  visualization_utils.h
ros_drivers_utils/launch/: arm_control_interface.launch  arm_force_control_interface.launch  arm_position_control_interface.launch  force_control_grasp.launch  force_control_grasp_debug.launch  hand_control_interface.launch  marker_pose.launch  move_arm.launch  move_to_start_pose.launch  pointcloud_snapshot.launch  run_experiment.launch  run_experiment_peg_hole.launch  test_arm_force_control.launch  test_arm_position_control.launch  test_hand_control.launch  test_plate_grasp.launch  test_transforms.launch
ros_drivers_utils/nodes/: experiment_manager.py  force_control_grasp.cpp  generate_start_poses.py  grasp_plate.py  move_arm.py  move_to_goal_vicinity.py  move_to_start_pose.py  perception_server_node.cpp  pointcloud_snapshot.cpp  raise_arm.py  start_poses.json  test_arm_force_control.cpp  test_arm_position_control.cpp  test_hand_control.cpp
ros_drivers_utils/rviz/: moveit.rviz
ros_drivers_utils/src/: arm_force_control.cpp  arm_position_control.cpp  geometry_utils.cpp  hand_control.cpp  marker_pose.cpp  perception_server.cpp  test_transforms.cpp  visualization_utils.cpp
ros_drivers_utils/src/softgrasp_ros/: moveit_utils.py  transform_utils.py
ros_drivers_utils/srv/: PointCloudPerception.srv  SetGraspParams.srv  SetGraspState.srv
